tests/negative/meta_readonly.urb
n = 1 0,
n.name = 1,
